# crowbook-intl

./: Cargo.toml  ChangeLog.md  README.md  README.tpl
data/: localize_macros.rs
examples/: example.rs  extract.rs  macrogen.rs
src/: common.rs  error.rs  extractor.rs  lang.rs  lib.rs  localizer.rs  macrogen.rs  message.rs
