[package]
name = "crowbook-localize"
version = "0.1.0"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "This crate has been renamed crowbook-intl. Please use this one fom now on."
readme = "README.md"
keywords = ["localization", "internationalization"]
repository = "https://github.com/lise-henry/crowbook-intl/"
documentation = "https://docs.rs/crowbook-intl"
license = "MPL-2.0"
publish = true

[dependencies]
lazy_static = "0.2"
regex = "0.1"
walkdir = "0.1"
