[package]
name = "crowbook-intl"
version = "0.2.2"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "An internationalization library to localize strings, translating them according to runtime option, using macros."
readme = "README.md"
keywords = ["localization", "internationalization"]
repository = "https://github.com/lise-henry/crowbook-intl/"
documentation = "https://docs.rs/crowbook-intl"
license = "MPL-2.0"
publish = true

[dependencies]
lazy_static = "1.4"
regex = "1.5"
walkdir = "2.3"
